--- a/app/src/main/res/layout/activity_signin.xml
+++ b/app/src/main/res/layout/activity_signin.xml
@@ -7,48 +7,51 @@
     tools:context=".MainActivity">
 
     <LinearLayout
+        android:layout_centerHorizontal="true"
+        android:layout_centerVertical="true"
+        android:orientation="vertical"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_centerInParent="true"
-        android:orientation="vertical">
+        android:layout_height="wrap_content">
 
         <TextView
-            android:id="@+id/textViewUserRegistration"
+            android:id="@+id/textViewUserLogin"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
-            android:text="User Registration"
+            android:text="User Login"
             android:textAppearance="?android:attr/textAppearanceLarge" />
 
+
         <EditText
+            android:layout_margin="15dp"
+            android:inputType="textEmailAddress"
+            android:hint="Email address"
             android:id="@+id/editTextEmail"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_margin="15dp"
-            android:hint="Email address"
-            android:inputType="textEmailAddress" />
+            android:layout_height="wrap_content" />
 
 
         <EditText
+            android:layout_margin="15dp"
+            android:inputType="textPassword"
+            android:hint="Password"
             android:id="@+id/editTextPassword"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_margin="15dp"
-            android:hint="Password"
-            android:inputType="textPassword" />
+            android:layout_height="wrap_content" />
 
         <Button
-            android:id="@+id/buttonRegister"
+            android:id="@+id/buttonSignIn"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_margin="15dp"
-            android:text="Register User" />
+            android:text="Sign In" />
 
         <TextView
+            android:textAlignment="center"
+            android:text="No account? Sign Up here"
             android:id="@+id/textViewSignIn"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="Already Registered? Sign in here"
-            android:textAlignment="center" />
+            android:layout_height="wrap_content" />
     </LinearLayout>
+
 </RelativeLayout>
