--- a/app/src/main/res/layout/review_layout.xml
+++ b/app/src/main/res/layout/review_layout.xml
@@ -8,24 +8,23 @@
 
     <ImageView
         android:id="@+id/profile_picture"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="155dp"
+        android:layout_height="148dp"
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
-        android:layout_marginStart="12dp"
-        android:layout_marginTop="11dp"
-        tools:srcCompat="@tools:sample/avatars"
-        android:contentDescription="TODO" />
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="18dp"
+        app:srcCompat="@drawable/sentosa" />
 
     <TextView
         android:id="@+id/reviewBox"
-        android:layout_width="wrap_content"
-        android:layout_height="125dp"
+        android:layout_width="200dp"
+        android:layout_height="144dp"
         android:layout_alignParentTop="true"
         android:layout_alignParentEnd="true"
-        android:layout_marginStart="11dp"
-        android:layout_marginTop="12dp"
-        android:layout_marginEnd="14dp"
+        android:layout_marginStart="29dp"
+        android:layout_marginTop="18dp"
+        android:layout_marginEnd="11dp"
         android:layout_toEndOf="@+id/profile_picture"
         android:text="Reviews" />
 </RelativeLayout>
