Added searchbar to mainpage, not yet programmed the search bar to search for activities.

--- a/app/src/main/res/layout/activity_home_page.xml
+++ b/app/src/main/res/layout/activity_home_page.xml
@@ -11,22 +11,12 @@
         android:layout_width="match_parent"
         android:layout_height="206dp"
         android:layout_marginTop="32dp"
+        android:contentDescription="todo"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/sentosa"
-        android:contentDescription="todo" />
-
-    <SearchView
-        android:id="@+id/mainSearchBar"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/imageCarousel" />
+        app:srcCompat="@drawable/sentosa" />
 
     <TextView
         android:id="@+id/textView"
@@ -51,7 +41,7 @@
         app:layout_constraintEnd_toStartOf="@+id/recommendButton"
         app:layout_constraintHorizontal_bias="0.455"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/mainSearchBar" />
+        app:layout_constraintTop_toBottomOf="@+id/searchTextView" />
 
     <Button
         android:id="@+id/recommendButton"
@@ -63,7 +53,7 @@
         android:text="Recommend Something"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/tagButton"
-        app:layout_constraintTop_toBottomOf="@+id/mainSearchBar" />
+        app:layout_constraintTop_toBottomOf="@+id/searchTextView" />
 
     <TextView
         android:id="@+id/textView2"
@@ -85,4 +75,31 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView2" />
+
+    <TextView
+        android:id="@+id/searchTextView"
+        android:layout_width="339dp"
+        android:layout_height="46dp"
+        android:layout_marginTop="16dp"
+        android:layout_marginEnd="24dp"
+        android:text="Search by Location (Nearest MRT)"
+        android:textSize="22sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/searchImage"
+        app:layout_constraintTop_toBottomOf="@+id/imageCarousel" />
+
+    <ImageView
+        android:id="@+id/searchImage"
+        android:layout_width="32dp"
+        android:layout_height="27dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="16dp"
+        android:layout_marginBottom="16dp"
+        app:layout_constraintBottom_toTopOf="@+id/tagButton"
+        app:layout_constraintEnd_toStartOf="@+id/searchTextView"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/imageCarousel"
+        app:layout_constraintVertical_bias="0.22000003"
+        app:srcCompat="@drawable/ic_search_black_24dp" />
 </android.support.constraint.ConstraintLayout>
