--- a/app/src/main/res/layout/recommendations_list.xml
+++ b/app/src/main/res/layout/recommendations_list.xml
@@ -7,7 +7,7 @@
     android:layout_height="match_parent">
 
     <SearchView
-        android:id="@+id/searchView"
+        android:id="@+id/mainSearchView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:layout_constraintEnd_toEndOf="parent"
@@ -24,5 +24,5 @@
         android:layout_marginTop="8dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/searchView" />
+        app:layout_constraintTop_toBottomOf="@+id/mainSearchView" />
 </android.support.constraint.ConstraintLayout>
