--- a/app/src/main/res/layout/leave_a_review_layout.xml
+++ b/app/src/main/res/layout/leave_a_review_layout.xml
@@ -11,7 +11,7 @@
         android:layout_height="wrap_content"
         android:layout_marginEnd="16dp"
         android:layout_marginBottom="16dp"
-        android:text="Submit"
+        android:text="@string/submit"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
 
@@ -21,7 +21,7 @@
         android:layout_height="41dp"
         android:layout_marginStart="16dp"
         android:layout_marginTop="16dp"
-        android:text="Leave a Review"
+        android:text="@string/leave_a_review"
         android:textColor="#63439C"
         android:textSize="24sp"
         app:layout_constraintStart_toStartOf="parent"
@@ -29,14 +29,14 @@
 
     <EditText
         android:id="@+id/editText3"
-        android:layout_width="387dp"
+        android:layout_width="381dp"
         android:layout_height="571dp"
         android:layout_marginStart="16dp"
         android:layout_marginEnd="16dp"
         android:layout_marginBottom="16dp"
         android:ems="10"
         android:gravity="start|top"
-        android:hint="Leave a review here"
+        android:hint="@string/leave_a_review_here"
         android:inputType="textMultiLine"
         app:layout_constraintBottom_toTopOf="@+id/submitReviewButton"
         app:layout_constraintEnd_toEndOf="parent"
