--- a/app/src/main/res/layout/recommendation_layout.xml
+++ b/app/src/main/res/layout/recommendation_layout.xml
@@ -9,24 +9,21 @@
         android:id="@+id/imageView"
         android:layout_width="412dp"
         android:layout_height="197dp"
+        android:contentDescription="@string/todo"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/vivo"
-        android:contentDescription="@string/todo" />
+        app:srcCompat="@drawable/vivo" />
 
     <TextView
         android:id="@+id/activityNameTitle"
-        android:layout_width="381dp"
-        android:layout_height="47dp"
+        android:layout_width="246dp"
+        android:layout_height="54dp"
         android:layout_marginStart="16dp"
-        android:layout_marginEnd="16dp"
         android:fontFamily="cursive"
         android:text="@string/activity_name"
         android:textColor="#4E1DA3"
         android:textSize="36sp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/imageView" />
 
@@ -177,8 +174,8 @@
 
     <ListView
         android:id="@+id/reviewsList"
-        android:layout_width="392dp"
-        android:layout_height="172dp"
+        android:layout_width="388dp"
+        android:layout_height="140dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="12dp"
         android:layout_marginEnd="8dp"
@@ -194,10 +191,13 @@
         android:id="@+id/leaveReviewButton"
         android:layout_width="138dp"
         android:layout_height="36dp"
+        android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
-        android:layout_marginEnd="8dp"
+        android:layout_marginBottom="8dp"
         android:text="@string/leave_a_review"
+        app:layout_constraintBottom_toBottomOf="@+id/activityNameTitle"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/button" />
+        app:layout_constraintStart_toEndOf="@+id/activityNameTitle"
+        app:layout_constraintTop_toBottomOf="@+id/imageView" />
 
 </android.support.constraint.ConstraintLayout>
