--- a/app/src/main/res/layout/recommendation_layout.xml
+++ b/app/src/main/res/layout/recommendation_layout.xml
@@ -17,8 +17,8 @@
 
     <TextView
         android:id="@+id/activityNameTitle"
-        android:layout_width="161dp"
-        android:layout_height="39dp"
+        android:layout_width="244dp"
+        android:layout_height="44dp"
         android:layout_marginStart="16dp"
         android:fontFamily="cursive"
         android:text="@string/activity_name"
@@ -189,32 +189,18 @@
 
     <Button
         android:id="@+id/leaveReviewButton"
-        android:layout_width="138dp"
-        android:layout_height="36dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
-        android:layout_marginBottom="8dp"
-        android:text="@string/leave_a_review"
-        app:layout_constraintBottom_toBottomOf="@+id/activityNameTitle"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/activityNameTitle"
-        app:layout_constraintTop_toBottomOf="@+id/imageView" />
-
-    <Button
-        android:id="@+id/leaveReviewButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
-        android:layout_marginBottom="8dp"
         android:text="Leave a Review"
-        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintBottom_toTopOf="@+id/textView12"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.969"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/imageView"
-        app:layout_constraintVertical_bias="0.295" />
+        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintStart_toEndOf="@+id/activityNameTitle"
+        app:layout_constraintTop_toBottomOf="@+id/imageView"
+        app:layout_constraintVertical_bias="0.888" />
 
 
 
