--- a/app/src/main/res/layout/recommendations_list.xml
+++ b/app/src/main/res/layout/recommendations_list.xml
@@ -19,12 +19,15 @@
 
     <ListView
         android:id="@+id/mainListView"
-        android:layout_width="401dp"
-        android:layout_height="478dp"
-        android:layout_marginTop="20dp"
+        android:layout_width="388dp"
+        android:layout_height="463dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="8dp"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/filterByTags" />
+        app:layout_constraintTop_toBottomOf="@+id/tagButton" />
 
     <Button
         android:id="@+id/tagButton"
@@ -32,24 +35,24 @@
         android:layout_height="53dp"
         android:layout_marginStart="16dp"
         android:layout_marginTop="8dp"
-        android:layout_marginBottom="8dp"
-        android:text="@string/tags"
-        app:layout_constraintBottom_toTopOf="@+id/mainListView"
+        android:text="Tags"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/mainSearchView"
-        app:layout_constraintVertical_bias="0.0" />
+        app:layout_constraintTop_toBottomOf="@+id/mainSearchView" />
 
     <TextView
         android:id="@+id/filterByTags"
-        android:layout_width="284dp"
-        android:layout_height="35dp"
+        android:layout_width="290dp"
+        android:layout_height="38dp"
         android:layout_marginStart="8dp"
-        android:layout_marginTop="16dp"
+        android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
+        android:layout_marginBottom="8dp"
         android:hint="Filter by Tags"
+        app:layout_constraintBottom_toTopOf="@+id/mainListView"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.272"
+        app:layout_constraintHorizontal_bias="0.428"
         app:layout_constraintStart_toEndOf="@+id/tagButton"
-        app:layout_constraintTop_toBottomOf="@+id/mainSearchView" />
+        app:layout_constraintTop_toBottomOf="@+id/mainSearchView"
+        app:layout_constraintVertical_bias="0.533" />
 
 </android.support.constraint.ConstraintLayout>
