--- a/app/src/main/res/layout/activity_signin.xml
+++ b/app/src/main/res/layout/activity_signin.xml
@@ -7,9 +7,13 @@
     tools:context=".MainActivity">
 
     <LinearLayout
-        android:layout_width="378dp"
-        android:layout_height="380dp"
-        android:layout_centerInParent="true"
+        android:layout_width="match_parent"
+        android:layout_height="373dp"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentEnd="true"
+        android:layout_centerVertical="true"
+        android:layout_marginStart="0dp"
+        android:layout_marginEnd="0dp"
         android:orientation="vertical">
 
         <TextView
