--- a/app/src/main/res/layout/recommendation_layout.xml
+++ b/app/src/main/res/layout/recommendation_layout.xml
@@ -68,7 +68,7 @@
         android:layout_width="299dp"
         android:layout_height="23dp"
         android:layout_marginEnd="16dp"
-        android:text="@string/link_to_google_maps"
+        android:text="Click for Google Maps"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/mrtName" />
 
@@ -110,7 +110,7 @@
         android:layout_height="20dp"
         android:layout_marginStart="8dp"
         android:layout_marginEnd="8dp"
-        android:text="@string/insert_price_e_g_free_2_10"
+        android:text="Free"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/textView18"
         app:layout_constraintTop_toBottomOf="@+id/timePeriod" />
