--- a/app/src/main/res/layout/activity_home_page.xml
+++ b/app/src/main/res/layout/activity_home_page.xml
@@ -6,29 +6,9 @@
     android:layout_height="match_parent"
     tools:context=".HomePageActivity">
 
-    <ImageView
-        android:id="@+id/imageCarousel"
-        android:layout_width="match_parent"
-        android:layout_height="206dp"
-        android:layout_marginTop="32dp"
-        android:contentDescription="todo"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/sentosa" />
-
-    <TextView
-        android:id="@+id/textView"
-        android:layout_width="392dp"
-        android:layout_height="23dp"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="16dp"
-        android:layout_marginBottom="16dp"
-        android:text="Tap things to do:"
-        app:layout_constraintBottom_toTopOf="@+id/imageCarousel"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+    <include
+        layout="@layout/custom_toolbar"
+        android:id="@+id/mainActivityToolbar"></include>
 
     <Button
         android:id="@+id/recommendButton"
@@ -54,8 +34,8 @@
 
     <ListView
         android:id="@+id/listViewTimeLimitedActivities"
-        android:layout_width="365dp"
-        android:layout_height="188dp"
+        android:layout_width="392dp"
+        android:layout_height="418dp"
         android:layout_marginStart="16dp"
         android:layout_marginTop="16dp"
         android:layout_marginEnd="16dp"
@@ -67,24 +47,24 @@
         android:id="@+id/searchTextView"
         android:layout_width="339dp"
         android:layout_height="46dp"
-        android:layout_marginTop="16dp"
+        android:layout_marginTop="8dp"
         android:layout_marginEnd="24dp"
         android:text="Search by Location (Nearest MRT)"
         android:textSize="22sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/searchImage"
-        app:layout_constraintTop_toBottomOf="@+id/imageCarousel" />
+        app:layout_constraintTop_toBottomOf="@+id/mainActivityToolbar" />
 
     <ImageView
         android:id="@+id/searchImage"
         android:layout_width="32dp"
         android:layout_height="27dp"
         android:layout_marginStart="16dp"
-        android:layout_marginTop="16dp"
+        android:layout_marginTop="12dp"
         app:layout_constraintEnd_toStartOf="@+id/searchTextView"
-        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintHorizontal_bias="0.74"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/imageCarousel"
+        app:layout_constraintTop_toBottomOf="@+id/mainActivityToolbar"
         app:srcCompat="@drawable/ic_search_black_24dp" />
 
 </android.support.constraint.ConstraintLayout>
