--- a/app/src/main/res/layout/recommendation_layout.xml
+++ b/app/src/main/res/layout/recommendation_layout.xml
@@ -16,25 +16,13 @@
         app:srcCompat="@drawable/vivo" />
 
     <TextView
-        android:id="@+id/activityNameTitle"
-        android:layout_width="244dp"
-        android:layout_height="44dp"
-        android:layout_marginStart="16dp"
-        android:fontFamily="cursive"
-        android:text="@string/activity_name"
-        android:textColor="#4E1DA3"
-        android:textSize="36sp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/imageView" />
-
-    <TextView
         android:id="@+id/mrtName"
         android:layout_width="232dp"
         android:layout_height="25dp"
         android:layout_marginTop="8dp"
         android:text="@string/nearest_mrt_name"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/activityNameTitle" />
+        app:layout_constraintTop_toBottomOf="@+id/horizontalScrollView" />
 
     <TextView
         android:id="@+id/textView10"
@@ -61,7 +49,7 @@
         app:layout_constraintEnd_toStartOf="@+id/mrtName"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/activityNameTitle" />
+        app:layout_constraintTop_toBottomOf="@+id/horizontalScrollView" />
 
     <TextView
         android:id="@+id/googleMaps"
@@ -74,8 +62,8 @@
 
     <TextView
         android:id="@+id/textView15"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="88dp"
+        android:layout_height="19dp"
         android:layout_marginStart="16dp"
         android:text="@string/time_period"
         android:textColor="#5629A2"
@@ -96,13 +84,13 @@
 
     <TextView
         android:id="@+id/textView18"
-        android:layout_width="40dp"
-        android:layout_height="23dp"
+        android:layout_width="41dp"
+        android:layout_height="20dp"
         android:layout_marginStart="16dp"
         android:text="@string/price"
         android:textColor="#5629A2"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView15" />
+        app:layout_constraintTop_toBottomOf="@+id/textviewdura" />
 
     <TextView
         android:id="@+id/price"
@@ -112,41 +100,20 @@
         android:layout_marginEnd="8dp"
         android:text="Free"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.2"
         app:layout_constraintStart_toEndOf="@+id/textView18"
-        app:layout_constraintTop_toBottomOf="@+id/timePeriod" />
+        app:layout_constraintTop_toBottomOf="@+id/durationTextView" />
 
     <TextView
         android:id="@+id/textView20"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
-        android:layout_marginTop="16dp"
+        android:layout_marginTop="8dp"
         android:text="@string/tags"
         android:textColor="#5629A2"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView18" />
-
-    <Button
-        android:id="@+id/button"
-        android:layout_width="71dp"
-        android:layout_height="34dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
-        android:text="@string/shopping"
-        android:textSize="8sp"
-        app:layout_constraintStart_toEndOf="@+id/button3"
-        app:layout_constraintTop_toBottomOf="@+id/price" />
-
-    <Button
-        android:id="@+id/button3"
-        android:layout_width="71dp"
-        android:layout_height="34dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
-        android:text="@string/friends"
-        android:textSize="10sp"
-        app:layout_constraintStart_toEndOf="@+id/button2"
-        app:layout_constraintTop_toBottomOf="@+id/price" />
 
     <TextView
         android:id="@+id/textView21"
@@ -160,17 +127,6 @@
         android:textSize="24sp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView20" />
-
-    <Button
-        android:id="@+id/button2"
-        android:layout_width="71dp"
-        android:layout_height="34dp"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="8dp"
-        android:text="@string/family"
-        android:textSize="10sp"
-        app:layout_constraintStart_toEndOf="@+id/textView20"
-        app:layout_constraintTop_toBottomOf="@+id/price" />
 
     <ListView
         android:id="@+id/reviewsList"
@@ -189,19 +145,96 @@
 
     <Button
         android:id="@+id/leaveReviewButton"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="112dp"
+        android:layout_height="39dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
+        android:layout_marginBottom="8dp"
         android:text="Leave a Review"
+        android:textSize="10sp"
         app:layout_constraintBottom_toTopOf="@+id/textView12"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="1.0"
-        app:layout_constraintStart_toEndOf="@+id/activityNameTitle"
+        app:layout_constraintStart_toEndOf="@+id/horizontalScrollView"
         app:layout_constraintTop_toBottomOf="@+id/imageView"
-        app:layout_constraintVertical_bias="0.888" />
+        app:layout_constraintVertical_bias="0.0" />
 
+    <HorizontalScrollView
+        android:id="@+id/horizontalScrollViewTag"
+        android:layout_width="341dp"
+        android:layout_height="20dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginBottom="8dp"
+        app:layout_constraintBottom_toTopOf="@+id/textView21"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintStart_toEndOf="@+id/textView20"
+        app:layout_constraintTop_toBottomOf="@+id/price"
+        app:layout_constraintVertical_bias="0.0">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+
+            <TextView
+                android:id="@+id/tagTextView"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="#Outdoor #Friends #Romance #Family #Indoor #Lover #Solo #Life"
+                tools:layout_editor_absoluteX="96dp"
+                tools:layout_editor_absoluteY="398dp" />
+        </LinearLayout>
+    </HorizontalScrollView>
+
+    <TextView
+        android:id="@+id/textviewdura"
+        android:layout_width="61dp"
+        android:layout_height="20dp"
+        android:layout_marginStart="16dp"
+        android:text="Duration:"
+        android:textColor="#673AB7"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView15" />
+
+    <TextView
+        android:id="@+id/durationTextView"
+        android:layout_width="298dp"
+        android:layout_height="19dp"
+        android:layout_marginStart="4dp"
+        android:layout_marginEnd="8dp"
+        android:text="11am - 12pm"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toEndOf="@+id/textviewdura"
+        app:layout_constraintTop_toBottomOf="@+id/timePeriod" />
+
+    <HorizontalScrollView
+        android:id="@+id/horizontalScrollView"
+        android:layout_width="262dp"
+        android:layout_height="49dp"
+        android:layout_marginStart="8dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/imageView">
+
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:orientation="vertical" >
+
+            <TextView
+                android:id="@+id/activityNameTitle"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:fontFamily="cursive"
+                android:text="Activity Name"
+                android:textColor="#9C27B0"
+                android:textSize="34sp" />
+        </LinearLayout>
+    </HorizontalScrollView>
 
 
 </android.support.constraint.ConstraintLayout>
