--- a/app/src/main/res/layout/review_layout.xml
+++ b/app/src/main/res/layout/review_layout.xml
@@ -6,25 +6,66 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <ImageView
-        android:id="@+id/profile_picture"
-        android:layout_width="155dp"
-        android:layout_height="148dp"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentTop="true"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="18dp"
-        app:srcCompat="@drawable/sentosa" />
-
     <TextView
         android:id="@+id/reviewBox"
-        android:layout_width="200dp"
-        android:layout_height="144dp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/username"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentEnd="true"
+        android:layout_marginStart="9dp"
+        android:layout_marginTop="26dp"
+        android:layout_marginEnd="18dp"
+        android:text="Reviews" />
+
+    <TextView
+        android:id="@+id/username"
+        android:layout_width="117dp"
+        android:layout_height="wrap_content"
+        android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
         android:layout_alignParentEnd="true"
-        android:layout_marginStart="29dp"
-        android:layout_marginTop="18dp"
-        android:layout_marginEnd="11dp"
-        android:layout_toEndOf="@+id/profile_picture"
-        android:text="Reviews" />
+        android:layout_marginStart="9dp"
+        android:layout_marginTop="6dp"
+        android:layout_marginEnd="285dp"
+        android:text="Username"
+        android:textColor="#3F51B5" />
+
+    <TextView
+        android:id="@+id/displayEmail"
+        android:layout_width="197dp"
+        android:layout_height="wrap_content"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentEnd="true"
+        android:layout_marginStart="197dp"
+        android:layout_marginTop="6dp"
+        android:layout_marginEnd="17dp"
+        android:text="Email"
+        android:textColor="#3F51B5" />
+
+    <TextView
+        android:id="@+id/textView13"
+        android:layout_width="168dp"
+        android:layout_height="wrap_content"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentEnd="true"
+        android:layout_marginStart="142dp"
+        android:layout_marginTop="-1dp"
+        android:layout_marginEnd="124dp"
+        android:layout_toEndOf="@+id/username"
+        android:text="hello" />
+
+    <TextView
+        android:id="@+id/textView17"
+        android:layout_width="216dp"
+        android:layout_height="wrap_content"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentEnd="true"
+        android:layout_marginStart="10dp"
+        android:layout_marginTop="29dp"
+        android:layout_marginEnd="185dp"
+        android:text="Review:"
+        android:textColor="#9C27B0" />
 </RelativeLayout>
