App should be okay now

--- a/app/src/main/res/layout/activity_recommending.xml
+++ b/app/src/main/res/layout/activity_recommending.xml
@@ -104,6 +104,7 @@
                     android:layout_width="350dp"
                     android:layout_height="59dp"
                     android:layout_marginStart="24dp"
+                    android:layout_marginTop="24dp"
                     android:layout_marginEnd="24dp"
                     android:layout_marginBottom="24dp"
                     android:ems="10"
@@ -114,7 +115,22 @@
                     app:layout_constraintHorizontal_bias="0.0"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/nearestMRTTextView"
-                    app:layout_constraintVertical_bias="0.217" />
+                    app:layout_constraintVertical_bias="1.0" />
+
+                <Button
+                    android:id="@+id/selectMRTButton"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="8dp"
+                    android:layout_marginTop="8dp"
+                    android:layout_marginEnd="8dp"
+                    android:layout_marginBottom="8dp"
+                    android:text="Select MRT here"
+                    app:layout_constraintBottom_toTopOf="@+id/nearestMRTEditText"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toEndOf="@+id/nearestMRTTextView"
+                    app:layout_constraintTop_toTopOf="parent" />
+
             </android.support.constraint.ConstraintLayout>
 
 
