--- a/app/src/main/res/layout/activity_recommendation_details.xml
+++ b/app/src/main/res/layout/activity_recommendation_details.xml
@@ -18,7 +18,7 @@
     <TextView
         android:id="@+id/mrtName"
         android:layout_width="232dp"
-        android:layout_height="25dp"
+        android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
         android:text="@string/nearest_mrt_name"
         app:layout_constraintEnd_toEndOf="parent"
@@ -54,7 +54,8 @@
     <TextView
         android:id="@+id/googleMaps"
         android:layout_width="299dp"
-        android:layout_height="23dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="4dp"
         android:layout_marginEnd="16dp"
         android:text="Click for Google Maps"
         app:layout_constraintEnd_toEndOf="parent"
@@ -75,34 +76,13 @@
         android:layout_width="287dp"
         android:layout_height="20dp"
         android:layout_marginStart="16dp"
+        android:layout_marginTop="8dp"
         android:layout_marginEnd="16dp"
         android:text="@string/insert_time_period"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintHorizontal_bias="0.333"
         app:layout_constraintStart_toEndOf="@+id/textView15"
         app:layout_constraintTop_toBottomOf="@+id/googleMaps" />
-
-    <TextView
-        android:id="@+id/textView18"
-        android:layout_width="41dp"
-        android:layout_height="20dp"
-        android:layout_marginStart="16dp"
-        android:text="@string/price"
-        android:textColor="#5629A2"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textviewdura" />
-
-    <TextView
-        android:id="@+id/price"
-        android:layout_width="328dp"
-        android:layout_height="20dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginEnd="8dp"
-        android:text="Free"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.2"
-        app:layout_constraintStart_toEndOf="@+id/textView18"
-        app:layout_constraintTop_toBottomOf="@+id/durationTextView" />
 
     <TextView
         android:id="@+id/textView20"
@@ -113,7 +93,7 @@
         android:text="@string/tags"
         android:textColor="#5629A2"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView18" />
+        app:layout_constraintTop_toBottomOf="@+id/textviewdura" />
 
     <TextView
         android:id="@+id/textView21"
@@ -165,15 +145,13 @@
         android:layout_width="341dp"
         android:layout_height="20dp"
         android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginBottom="8dp"
         app:layout_constraintBottom_toTopOf="@+id/textView21"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toEndOf="@+id/textView20"
-        app:layout_constraintTop_toBottomOf="@+id/price"
-        app:layout_constraintVertical_bias="0.0">
+        app:layout_constraintTop_toBottomOf="@+id/durationTextView">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -208,7 +186,7 @@
         android:layout_marginEnd="8dp"
         android:text="11am - 12pm"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintHorizontal_bias="0.25"
         app:layout_constraintStart_toEndOf="@+id/textviewdura"
         app:layout_constraintTop_toBottomOf="@+id/timePeriod" />
 
