--- a/app/src/main/res/layout/activity_user_profile.xml
+++ b/app/src/main/res/layout/activity_user_profile.xml
@@ -87,7 +87,7 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <ListView
-        android:id="@+id/savedActivities"
+        android:id="@+id/savedActivitiesListView"
         android:layout_width="395dp"
         android:layout_height="337dp"
         android:layout_marginStart="8dp"
