--- a/app/src/main/res/layout/activity_recommendation_details.xml
+++ b/app/src/main/res/layout/activity_recommendation_details.xml
@@ -76,7 +76,7 @@
         android:layout_width="287dp"
         android:layout_height="20dp"
         android:layout_marginStart="16dp"
-        android:layout_marginTop="8dp"
+        android:layout_marginTop="4dp"
         android:layout_marginEnd="16dp"
         android:text="@string/insert_time_period"
         app:layout_constraintEnd_toEndOf="parent"
@@ -95,7 +95,7 @@
         app:layout_constraintTop_toBottomOf="@+id/textviewdura" />
 
     <TextView
-        android:id="@+id/price"
+        android:id="@+id/priceTextView"
         android:layout_width="328dp"
         android:layout_height="20dp"
         android:layout_marginStart="8dp"
@@ -110,17 +110,17 @@
         android:id="@+id/textView20"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="8dp"
+        android:layout_marginStart="20dp"
+        android:layout_marginTop="16dp"
         android:text="@string/tags"
         android:textColor="#5629A2"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textviewdura" />
+        app:layout_constraintTop_toBottomOf="@+id/textView18" />
 
     <TextView
         android:id="@+id/textView21"
-        android:layout_width="383dp"
-        android:layout_height="36dp"
+        android:layout_width="126dp"
+        android:layout_height="43dp"
         android:layout_marginStart="16dp"
         android:layout_marginTop="16dp"
         android:fontFamily="cursive"
@@ -147,20 +147,14 @@
 
     <Button
         android:id="@+id/leaveReviewButton"
-        android:layout_width="112dp"
-        android:layout_height="39dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginBottom="8dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="24dp"
+        android:layout_marginTop="20dp"
         android:text="Leave a Review"
         android:textSize="10sp"
-        app:layout_constraintBottom_toTopOf="@+id/textView12"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="1.0"
-        app:layout_constraintStart_toEndOf="@+id/horizontalScrollView"
-        app:layout_constraintTop_toBottomOf="@+id/imageView"
-        app:layout_constraintVertical_bias="0.0" />
+        app:layout_constraintStart_toEndOf="@+id/textView21"
+        app:layout_constraintTop_toBottomOf="@+id/horizontalScrollViewTag" />
 
     <HorizontalScrollView
         android:id="@+id/horizontalScrollViewTag"
@@ -173,7 +167,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toEndOf="@+id/textView20"
-        app:layout_constraintTop_toBottomOf="@+id/durationTextView">
+        app:layout_constraintTop_toBottomOf="@+id/priceTextView">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -208,22 +202,23 @@
         android:layout_marginEnd="8dp"
         android:text="11am - 12pm"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.25"
+        app:layout_constraintHorizontal_bias="0.303"
         app:layout_constraintStart_toEndOf="@+id/textviewdura"
         app:layout_constraintTop_toBottomOf="@+id/timePeriodTextView" />
 
     <HorizontalScrollView
         android:id="@+id/horizontalScrollView"
-        android:layout_width="262dp"
-        android:layout_height="49dp"
+        android:layout_width="232dp"
+        android:layout_height="57dp"
         android:layout_marginStart="8dp"
+        android:layout_marginTop="4dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/imageView">
 
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
-            android:orientation="vertical" >
+            android:orientation="vertical">
 
             <TextView
                 android:id="@+id/activityNameTitle"
@@ -238,19 +233,30 @@
 
     <Button
         android:id="@+id/saveButton"
-        android:layout_width="60dp"
-        android:layout_height="39dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
+        android:layout_marginTop="4dp"
         android:layout_marginEnd="8dp"
-        android:layout_marginBottom="8dp"
-        android:text="Save"
-        app:layout_constraintBottom_toBottomOf="parent"
+        android:text="Save Activity"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.635"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/imageView"
-        app:layout_constraintVertical_bias="0.291" />
+        app:layout_constraintHorizontal_bias="0.583"
+        app:layout_constraintStart_toEndOf="@+id/horizontalScrollView"
+        app:layout_constraintTop_toBottomOf="@+id/imageView" />
+
+    <Button
+        android:id="@+id/deleteReviewButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="32dp"
+        android:layout_marginTop="20dp"
+        android:layout_marginEnd="8dp"
+        android:text="Delete your review"
+        android:textSize="10sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintStart_toEndOf="@+id/leaveReviewButton"
+        app:layout_constraintTop_toBottomOf="@+id/horizontalScrollViewTag" />
 
 
 </android.support.constraint.ConstraintLayout>
