--- a/app/src/main/res/layout/activity_recommending.xml
+++ b/app/src/main/res/layout/activity_recommending.xml
@@ -265,7 +265,7 @@
                     android:layout_marginTop="8dp"
                     android:layout_marginBottom="8dp"
                     android:ems="10"
-                    android:hint="Time Period"
+                    android:hint="Cost"
                     android:inputType="textPersonName"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
